<resources>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter Password</string>
    <string name="username">Username:</string>
    <string name="sign_up_for_free">Sign-Up for Free</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="goals">Goals</string>
    <string name="transactions">Transactions</string>
    <string name="about">About</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="new_transction">New transction</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Confirm your password</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your email</string>
    <string name="sign_up">Sign-Up</string>
    <string name="already_have_account">Already have an account? Sign-in</string>
    <string name="sign_in">Sign-In</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string-array name="category_array">
        <item>Food</item>
        <item>Entertainment</item>
        <item>Travel</item>
        <item>Shopping</item>
        <item>Utilities</item>
        <item>Other</item>
    </string-array>
    <string name="app_name">SpendSmart</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="app_description">SpendSmart is a user-friendly financial management app that helps you track your income and expenses, set financial goals, and partner with others to manage shared expenses seamlessly.</string>
    <string name="features_title">Features:</string>
    <string name="features_list">• Track income and expenses\n• Set and monitor financial goals\n• Partner with others for shared finances\n• Real-time data syncing\n• Customizable categories and avatars</string>
    <string name="developer_title">Developers:</string>
    <string name="developer_names">Nir Turjeman</string>
    <string name="contact_title">Contact Us:</string>
<string name="contact_email">Nirturjeman@gmail.com</string>
    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>